# pybind_he

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild.sh  setup.py
cb/: cb.cbp  cb.layout
docs/: INSTALL_OPENSSL.md  SANITY_CHECK.md  WSL_INSTALL.md  WSL_INSTALL_NEW.md  WSL_INSTALL_OLD.md  WSL_INSTALL_PYBIND.md  WSL_PROCEDURE.md
examples/: CMakeLists.txt  bgv_matrix_op.cpp  bgv_matrix_op.profile  bgv_search.cpp  binaryArith_example.cpp  build.sh  client_tfhe.c  params.h  params1.cpp  server_tfhe.c  test.sh  tfhe_build.sh  total_time.sh  tutorial_tfhe.c  utils.h
examples/embeddedPython/: MockFPGA.py  eep.c  ep_build.sh  multiply.py  pe_test.c  pybind_embedded.cpp  pythonfft.c  test-fft.py
examples/embeddedPython/pybind/: CMakeLists.txt  MockFPGA.py  build.sh  pybind_embedded.cpp
examples/embeddedPython/pythonCapi/: eep.c  ep_build.sh  multiply.py  pe_test.c  vhle_test.c
examples/profile/: bgv_matrix_op.profile  bgv_matrix_op_add.profile  bgv_matrix_op_mul.profile  bgv_search.profile
examples/profile/bluesteinparam/: rbMaxk.dump  rbNumPrimes.dump  rbk.dump  rblen.dump  rbtbl.dump  root.dump  x.dump
examples/profile/callgrind/: callgrind.out.21460
examples/profile/gprof/: bgv_matrix_op.out
examples/profile/helib/: bgv_matrix_op_add.profile
examples/testmodule/: test.py
gdb/: main.gdb
pybind_he/: helib_bgv.cpp  pybind_he.cpp  pybind_he.h  test_bgv.py
pybind_test/: CMakeLists.txt  he_accel.bit  main.cpp  run.sh  tutorial.cpp
pybind_test/run/: answer.data  cloud.data
script/: bl_build.sh  checkout_submodules.sh  cp_HElib_pack.sh  cp_Pybind11.sh  export_HElib_pack_path.sh  f.sh  install_HElib.sh  install_Pybind.sh  install_pybind_he.sh  install_vs_Pybind.sh  run_example_HElib.sh  run_python_unittest.sh  tfhe_build.sh  tfhe_local_computer_install.sh  w_build_pybind_he.bat
vs/: VS.md
(+11 files in other folders)
